apps/freshrss/namespace.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.33.0/namespace-v1.json
apiVersion: v1
kind: Namespace
metadata:
  name: freshrss
