apps/freshrss/service.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.33.0/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: freshrss
